--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "laravel/sanctum": "^3.2",
         "laravel/tinker": "^2.8",
         "laravel/ui": "^4.2",
-        "spatie/ssh": "^1.9"
+        "spatie/ssh": "^1.9",
+        "ext-ssh2": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
