--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
 /.phpunit.cache
 /node_modules
-/public/build
 /public/hot
 /public/storage
 /public/storage_tasks
+/storage
 /storage/*.key
 /vendor
 .env
