--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "react-router-dom": "^6.14.2"
+        "react-redux": "^9.1.0",
+        "react-router-dom": "^6.22.3"
     }
 }
