--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "bulma": "^1.0.0",
         "react-redux": "^9.1.0",
         "react-router-dom": "^6.22.3"
     }
