--- a/package.json
+++ b/package.json
@@ -17,6 +17,35 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
+        "@ckeditor/ckeditor5-alignment": "^37.1.0",
+        "@ckeditor/ckeditor5-autoformat": "^37.1.0",
+        "@ckeditor/ckeditor5-basic-styles": "^37.1.0",
+        "@ckeditor/ckeditor5-block-quote": "^37.1.0",
+        "@ckeditor/ckeditor5-build-classic": "^41.3.1",
+        "@ckeditor/ckeditor5-cloud-services": "^37.1.0",
+        "@ckeditor/ckeditor5-code-block": "^37.1.0",
+        "@ckeditor/ckeditor5-core": "^37.1.0",
+        "@ckeditor/ckeditor5-editor-classic": "^37.1.0",
+        "@ckeditor/ckeditor5-essentials": "^37.1.0",
+        "@ckeditor/ckeditor5-font": "^37.1.0",
+        "@ckeditor/ckeditor5-heading": "^37.1.0",
+        "@ckeditor/ckeditor5-horizontal-line": "^37.1.0",
+        "@ckeditor/ckeditor5-html-support": "^37.1.0",
+        "@ckeditor/ckeditor5-image": "^37.1.0",
+        "@ckeditor/ckeditor5-indent": "^37.1.0",
+        "@ckeditor/ckeditor5-link": "^37.1.0",
+        "@ckeditor/ckeditor5-list": "^37.1.0",
+        "@ckeditor/ckeditor5-media-embed": "^37.1.0",
+        "@ckeditor/ckeditor5-paragraph": "^37.1.0",
+        "@ckeditor/ckeditor5-paste-from-office": "^37.1.0",
+        "@ckeditor/ckeditor5-react": "6.1.0",
+        "@ckeditor/ckeditor5-remove-format": "^37.1.0",
+        "@ckeditor/ckeditor5-style": "^37.1.0",
+        "@ckeditor/ckeditor5-table": "^37.1.0",
+        "@ckeditor/ckeditor5-theme-lark": "^37.1.0",
+        "@ckeditor/ckeditor5-typing": "^37.1.0",
+        "@ckeditor/ckeditor5-upload": "^37.1.0",
+        "@ckeditor/vite-plugin-ckeditor5": "^0.1.1",
         "@fortawesome/fontawesome-svg-core": "^6.5.2",
         "@fortawesome/free-brands-svg-icons": "^6.5.2",
         "@fortawesome/free-regular-svg-icons": "^6.5.2",
